--- a/src/questions/smart_contracts.yaml
+++ b/src/questions/smart_contracts.yaml
@@ -332,9 +332,8 @@
   type: MultipleChoice
   content: What are the ill-effects of increasing MEV?
   hint: Effets of MEV crowding
-  explanation: The ill-effects of MEV include increase in the gas fees and high MEV compared to standard block reward which would directly effect to the end user.
+  explanation: Increase in the MEV can result in alteration in exchange rates due to front-running.
   answerKeys:
-    - C
     - D
   subTopics:
     - "miner-extractable-value"
@@ -346,7 +345,7 @@
       key: B
     - content: High gas fees
       key: C
-    - content: Reduction in the number of transactions on the blockchain.
+    - content: Alteration in exchange rates 
       key: D
 - uuid: 8ea66582-4e5e-42bd-b413-8e8fe2f2acb4
   type: MultipleChoice
@@ -393,7 +392,7 @@
   hint: NoHint
   explanation: Cryptokitties is a famous non-fungible token.
   answerKeys:
-    - C
+    - A
   subTopics:
     - "fungible-non-fungible-tokens"
   difficultyLevel: "Low"
