--- a/src/summaries/lending_and_credit.yaml
+++ b/src/summaries/lending_and_credit.yaml
@@ -138,7 +138,7 @@
   key: borrowing-use-cases
   details: |
     - Over-colleteralized borrowing seems to be not relevant initially as the amount of collateral needed to borrow the 
-      tokens can be quite high. But thee are many user cases for it.
+      tokens can be quite high. But there are many use cases for it.
       * **Yield Farming** - The process involves leveraging DeFi protocols to lend cryptocurrencies for high returns that can 
         go up to 100% in annualized yields. Yield farming originates from banks’ process in lending your deposits; the difference 
         is that DeFi yield farming compounds the interest earned.
@@ -155,3 +155,4 @@
         a trader, you need to find ways to protect your investment from risk, and this is where crypto hedging strategies come in. 
         Hedging encompasses opening positions in opposing market directions to reduce the risks and impacts of market swings. By doing this, 
         you can help to offset any potential losses that might occur.
+    
